--- a/ChatroServer/packages.config
+++ b/ChatroServer/packages.config
@@ -12,4 +12,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="ServiceStack.Common" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.Interfaces" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.OrmLite" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="4.5.4" targetFramework="net461" />
+  <package id="ServiceStack.Text" version="4.5.4" targetFramework="net461" />
 </packages>
