--- a/ChatroServer/Web.config
+++ b/ChatroServer/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="MsSql" connectionString="Data Source=MB-PC\MSSQLDEV;Initial Catalog=ChatroDb;Integrated Security=True"/>
+    <add name="MsSql" connectionString="Data Source=MB-PC\MSSQLDEV;Initial Catalog=master;Integrated Security=True"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
