Added message entity
Message entity added, because we need to store messages in the database.

--- a/ChatroServer/ChatroServer.csproj
+++ b/ChatroServer/ChatroServer.csproj
@@ -102,6 +102,8 @@
       <HintPath>..\packages\ServiceStack.Text.4.5.4\lib\net45\ServiceStack.Text.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Design" />
+    <Reference Include="System.IdentityModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -140,6 +142,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="src\Entity\Message.cs" />
     <Compile Include="src\SingletonDbConnection.cs" />
     <Compile Include="src\Startup.cs" />
     <Compile Include="src\Entity\User.cs" />
